<resources>
    <string name="app_name">Drone delivery</string>

    <string name="tab_title_receiver">Receive</string>
    <string name="tab_title_sender">Send</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_failed">Login failed!</string>
    <string name="password_repeat">Password (repeat)</string>
    <string name="password_mismatch">Passwords do not match!</string>
    <string name="login">Log in</string>
    <string name="register">Setup account</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="user_profile_image">User profile image</string>
    <string name="form_incomplete">Please complete the form</string>
    <string name="selectImage">Select image</string>
    <string name="registration_success">Registration successful</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="missing_picture">Profile picture missing!</string>
    <string name="photo_upload_failed">Photo upload failed!</string>
    <string name="username_taken">Username taken!</string>

    <string name="action_validate_text">Save profile</string>
    <string name="action_clear_text">Clear profile</string>

    <string name="main_receiving_msg">Waiting for senders</string>
    <string name="main_online_status">Online status</string>
    <string name="eta">ETA</string>
    <string name="status">Status</string>
    <string name="connect">Connect</string>
    <string name="rec_ready">Ready</string>
    <string name="rec_busy">Busy</string>
    <string name="user_busy">User busy!</string>
    <string name="me">Me</string>
    <string name="that_is_you">That\'s you!</string>

    <string name="title_activity_map">Map</string>
    <string name="title_activity_drone_connection">DroneConnectionActivity</string>
    <string name="enable">Enable</string>
    <string name="wifi_disabled">Wifi is disabled</string>
    <string name="no_nearby_device">No nearby device</string>

    <string name="device_id">Device ID</string>
    <string name="device_name">Device name</string>
</resources>
